// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzers GitHooksAnalyzer should analyze a project with .huskyrc correctly 1`] = `
Object {
  "gitHooks": true,
  "gitHooksInstallation": Object {
    "declared": "1.3.1",
    "installed": null,
    "latest": "1.3.1",
    "location": "devDependencies",
  },
  "gitHooksLocation": "rc",
}
`;

exports[`Analyzers GitHooksAnalyzer should analyze a project with husky in package correctly 1`] = `
Object {
  "gitHooks": false,
  "gitHooksInstallation": Object {
    "declared": null,
    "installed": null,
    "latest": "1.3.1",
    "location": null,
  },
  "gitHooksLocation": "package",
}
`;
